// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box component should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "div",
  },
  "render": [Function],
}
`;

exports[`Box component should accept a react Element as renderAs prop 1`] = `
<p
  className="box"
>
  Custom
  This should be a p element
</p>
`;

exports[`Box component should concat Bulma class with classes in props 1`] = `
<div
  className="box other-class test"
>
  Facebook
</div>
`;

exports[`Box component should have box classname 1`] = `
<div
  className="box"
>
  Facebook
</div>
`;

exports[`Box component should have custom inline styles 1`] = `
<section
  className="box"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
>
  This should be a section with custom styles
</section>
`;

exports[`Box component should render as an html section 1`] = `
<section
  className="box"
>
  This should be a section
</section>
`;
